fix: small build to increase readability

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #55555f;
+  --foreground: #5a5a5a;
 }
 
 @theme inline {
